--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@google-cloud/secret-manager": "^5.6.0",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "firebase-functions": "^5.0.1",
