Fixing deploying to production

--- a/firebase.json
+++ b/firebase.json
@@ -15,7 +15,8 @@
     "singleProjectMode": true
   },
   "functions": {
-    "source": "functions"
+    "source": ".",
+    "runtime": "nodejs22"
   },
   "firestore": {
     "rules": "firestore.rules",
